--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <button class="btn" data-modal="#modal_hire_me">HIRE ME</button>
                         <a class="btn" href="#" data-modal="#modal_resume">SEE MY RESUME</a>
                     </div>
-                    <div class="main__photo"><img src="../img/photo.webp" alt=""></div>
+                    <div class="main__photo"><img src="img/photo.webp" alt=""></div>
                 </div>
             </div>
         </main>
