--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="container">
                 <div class="about__items">
                     <div class="about__photo">
-                        <img src="../img/designerAbout.webp" alt="photo designer">
+                        <img src="img/designerAbout.webp" alt="photo designer">
                     </div>
                     <div class="about__content">
                         <h3 class="title">ABOUT ME</h3>
