--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             </div> 
                         </a>
                                        
-                        <div class="nav">
+                        <div class="nav"  id="nav">
                             <a class="link" href="#">WORK</a>
                             <a class="link" href="#">ABOUT ME</a>
                             <a class="link" href="#">BLOG </a>
@@ -58,7 +58,7 @@
                             <a class="link-btn" href="#" data-modal="#modal_hire_me">HIRE ME</a>
                         </div>
                         
-                    <div class="burger"><i class="fas fa-bars"></i></div>
+                    <button class="burger" type="button" id="navToggle"><i class="fas fa-bars"></i></button>
 
                 </div>
             </div>
