--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                         </a>
                                        
                         <div class="nav"  id="nav">
-                            <a class="link" href="#">WORK</a>
-                            <a class="link" href="#">ABOUT ME</a>
-                            <a class="link" href="#">BLOG </a>
-                            <a class="link" href="#">CONTACT</a>
+                            <a class="link" href="#works">WORK</a>
+                            <a class="link" href="#about">ABOUT ME</a>
+                            <a class="link" href="#blog">BLOG</a>
+                            <a class="link" href="#footer">CONTACT</a>
                             <a class="link-btn" href="#" data-modal="#modal_hire_me">HIRE ME</a>
                         </div>
                         
@@ -90,7 +90,7 @@
         </main>
 
         <!-- Works -->
-        <div class="works">
+        <div class="works" id="works" >
             <div class="container">
                 <div class="works__menu">
                     <a class="link" href="#" data-filter="all">All</a>
@@ -161,7 +161,7 @@
         </div><!-- Works -->
 
         <!-- About me -->
-        <div class="about">
+        <div class="about" id="about">
             <div class="container">
                 <div class="about__items">
                     <div class="about__photo">
@@ -182,7 +182,7 @@
         </div><!-- About -->
 
         <!-- Reviews -->
-        <div class="rewiews">
+        <div class="rewiews" id="blog">
             <div class="container">
                 <div class="rewiews__items">
                     <div class="rewiews__text">
@@ -276,7 +276,7 @@
 </div>
 
 <!-- Footer -->
-<div class="footer">
+<div class="footer" id="footer">
     <div class="container">
         <div class="footer__content">
            <div class="footer__item">
@@ -293,9 +293,9 @@
 
            <div class="footer__menu">
                 <div class="footer__nav">
-                    <a class="link" href="#">Work</a>
-                    <a class="link" href="#">About Me</a>
-                    <a class="link" href="#">Blog</a>
+                    <a class="link" href="#works">Work</a>
+                    <a class="link" href="#about">About Me</a>
+                    <a class="link" href="#blog">Blog</a>
                     <a class="link" href="#">Contact</a>
                     <a class="link btn" href="#" data-modal="#modal_hire_me">HIRE ME</a>
                 </div> 
